add linkedin for tanzib and leo

--- a/mofem/doc/authors_page.dox
+++ b/mofem/doc/authors_page.dox
@@ -36,8 +36,8 @@
 
   - Richard Olley, The University of Glasgow, Scotland, UK
   - Joshua Gorham, The University of Glasgow, Scotland, UK
-  - MD Tanzib Ehsan Sanglap, The University of Glasgow, Scotland, UK
-  - Yingjia (Leo) Gao, The University of Glasgow, Scotland, UK
+  - MD Tanzib Ehsan Sanglap, The University of Glasgow, Scotland, UK, <a href="https://www.linkedin.com/in/shonglap/"><i class="fab fa-linkedin-in"></i></a>
+  - Yingjia (Leo) Gao, The University of Glasgow, Scotland, UK, <a href="https://www.linkedin.com/in/yingjia-gao-064742295/"><i class="fab fa-linkedin-in"></i></a>
   - Ananya Bijaya, The University of Glasgow, Scotland, UK
   - Lily Sierra Fisher, The University of Glasgow, Scotland, UK, <a href="https://www.linkedin.com/in/lily-sierra/"><i class="fab fa-linkedin-in"></i></a>
 
