--- a/mofem/doc/authors_page.dox
+++ b/mofem/doc/authors_page.dox
@@ -26,7 +26,7 @@
     <a rel="me" href="https://fosstodon.org/@likask"><i class="fab fa-mastodon"></i></a> 
     <a href="https://bsky.app/profile/likask.bsky.social"><i class="fab fab fa-bluesky"></i></a> 
     <a href="https://www.linkedin.com/in/lukasz-kaczmarczyk-21a1455/"><i class="fab fa-linkedin-in"></i></a>
-  - <a href="https://www.gla.ac.uk/schools/engineering/staff/karollewandowski/">Karol Lewandowski</a>, The University of Glasgow, Scotland, UK,
+  - <a href="https://www.gla.ac.uk/schools/engineering/staff/index.html/staffcontact/person/4edce6e1849f">Karol Lewandowski</a>, The University of Glasgow, Scotland, UK,
   <a href="https://twitter.com/inz_KaroleL"><i class="fab fa-twitter"></i></a>
   <a href="https://www.linkedin.com/in/karol-lewandowski-b07080b1/"><i class="fab fa-linkedin-in"></i></a>
   - <a href="https://www.gla.ac.uk/schools/engineering/staff/andreishvarts/">Andrei Shvarts</a>, The University of Glasgow, Scotland, UK,
@@ -46,7 +46,7 @@
 
 \section mofem_users_modules_past_contributors Past Contributors
 
-- <a href="https://www.gla.ac.uk/schools/engineering/staff/ignatiosathanasiadis/">Ignatios Athanasiadis</a>, The University of Glasgow, Scotland, UK, 
+- <a href="https://www.gla.ac.uk/schools/engineering/staff/ignatiosathanasiadis/">Ignatios Athanasiadis</a>, 
   <a href="https://twitter.com/Ignatios_Ath"><i class="fab fa-twitter"></i></a>
   <a href="https://www.linkedin.com/in/ignatios-athanasiadis-923937b7/"><i class="fab fa-linkedin-in"></i></a>
 - <a href="https://www.gla.ac.uk/schools/engineering/staff/danielebarbera/">Daniele Barbera</a>, Advanced Forming Research Centre, Scotland, UK
