add preslav affiliation

--- a/mofem/doc/authors_page.dox
+++ b/mofem/doc/authors_page.dox
@@ -53,7 +53,7 @@
 - <a href="https://pure.qub.ac.uk/en/persons/zahur-ullah">Zahur Ullah</a>, Queen's University, Northern Ireland, UK
 - <a href="https://www.northumbria.ac.uk/about-us/our-staff/n/hoang-nguyen/">Hoang Nguyen</a>, Northumbria University, England, UK
 - Christophe-Alexandre Chalons-Mouriesse
-- Preslav Alexandrov
+- Preslav Alexandrov, Department of Computer Science and Technology, University of Cambridge, England, UK
 - Mebratu Wakeni
 - Ross Mackenzie
 - Euan Muir
