--- a/mofem/doc/opportunities.dox
+++ b/mofem/doc/opportunities.dox
@@ -30,7 +30,7 @@ Principal supervisor:
 Application deadline: 17/02/25
 
 \htmlonly
-<a href="https://www.exageo.org/phd-student-projects/">
+<a href="https://www.findaphd.com/phds/project/exageo-phd-gpu-accelerated-multiscale-modelling-for-glacier-sliding/?p181691">
     <button type="button">Information</button>
 </a>
 \endhtmlonly
@@ -124,7 +124,7 @@ Application deadline: 28/02/25
 
 Principal supervisor: 
 \htmlonly
-<a href="https://www.gla.ac.uk/schools/engineering/staff/lukaszkaczmarczyk/">Prof £ukasz Kaczmarczyk</a>
+<a href="https://www.gla.ac.uk/schools/engineering/staff/lukaszkaczmarczyk/">Prof ï¿½ukasz Kaczmarczyk</a>
 \endhtmlonly
 
 Application deadline: 28/02/25
@@ -197,7 +197,7 @@ Line manager:
 Application deadline: 17/02/25
 
 \htmlonly
-<a href="https://www.linkedin.com/jobs/view/4138231700">
+<a href="https://glasgow.targetconnect.net/leap/jobs.html?id=140894&service=Careers%20Service">
     <button type="button">Information</button>
 </a>
 \endhtmlonly
