--- a/mofem/doc/opportunities.dox
+++ b/mofem/doc/opportunities.dox
@@ -192,7 +192,7 @@ Application deadline: 31/03/25
 \htmlonly
 <a href="https://mesh-oriented-solutions.com">Mesh-Oriented Solutions</a>
 \endhtmlonly
-is a Glasgow-based startup focusing on applying MoFEM to address emerging industrial challanges.
+is a Glasgow-based startup focusing on applying MoFEM to address emerging industrial challenges.
 
 \subsection MOS_internship Software Developer Intern
 
