--- a/mofem/doc/opportunities.dox
+++ b/mofem/doc/opportunities.dox
@@ -187,14 +187,15 @@ Application deadline: 31/03/25
 </a>
 \endhtmlonly
 
-\section mos_jobs Mesh-Oriented Solutions vacancies
+\section mos_jobs Vacancies at companies using MoFEM
+
+\subsection MOS_internship Software Developer Intern
 
 \htmlonly
 <a href="https://mesh-oriented-solutions.com">Mesh-Oriented Solutions</a>
 \endhtmlonly
 is a Glasgow-based startup focusing on applying MoFEM to address emerging industrial challenges.
 
-\subsection MOS_internship Software Developer Intern
 
 Line manager:
 \htmlonly
