--- a/mofem/tutorials/vec-0/doc/elastic.dox
+++ b/mofem/tutorials/vec-0/doc/elastic.dox
@@ -78,22 +78,22 @@ The Gauss quadrature is utilised to calculate the integrals.
 In this section we will focus on the procedure to setup and solve vector-valued problems such as elasticity in MoFEM using MoFEM::Simple and Form Integrators, which are template UDOs used for common operations.  
 The code developed for this example can be compiled for both 2D and 3D cases by assigning the input parameter *EXECUTABLE_DIMENSION* in the *CMakeFiles.txt* prior to compilation and is used throughout the code to define the constant variable *SPACE_DIM* which is used as a template paramenter to assign the dimension of the executable:
 
-\snippet users_modules/tutorials/vec-0/elastic.cpp Define dimension
+\snippet tutorials/vec-0/elastic.cpp Define dimension
 
 Based on *SPACE_DIM* appropriate element types are defined in the following snippet for example, *DomainEle* in 2D are defined as faces while in 3D they are defined as volumes:
 
-\snippet users_modules/tutorials/vec-0/elastic.cpp Define entities
+\snippet tutorials/vec-0/elastic.cpp Define entities
 
 The main program then consists of a series of functions when invoking the function Example::runProblem():
 
-\snippet users_modules/tutorials/vec-0/elastic.cpp Run problem
+\snippet tutorials/vec-0/elastic.cpp Run problem
 
 where Example::readMesh() executes the mesh reading procedure, refer to \ref basic_tutorials_mesh_generation_2d and \ref basic_tutorials_mesh_generation_3d for an introduction to mesh generation.
 
 \subsection tutorial_elastic_problem_set_up Problem setup
 The first function, Example::setupProblem() is used to setup the problem and involves adding the displacement field *U* on the entities of the mesh and determine the base function space, base, field rank and base order. For this problem We are adding displacement field *U* as both domain and a boundary field.
 
-\snippet users_modules/tutorials/vec-0/elastic.cpp Set up problem
+\snippet tutorials/vec-0/elastic.cpp Set up problem
 
 The space selected for displacement field U is `H1` and dimension is *SPACE_DIM* that corresponds to a vector field with *SPACE_DIM* number of coefficients.
 Additionally, we define command line parameters *-base* and *-order* that specify the base and order of our base respectively with `AINSWORTH_LEGENDRE_BASE` and 2nd order selected by default.
@@ -101,7 +101,7 @@ Additionally, we define command line parameters *-base* and *-order* that specif
 \subsection tutorial_elastic_dirichlet Essential boundary conditions
 The next function, Example::boundaryCondition() is used to apply homogeneous Dirichlet boundary conditions for our problem by utilise MoFEM's utility to remove degrees of freedom from a problem through the *BcManager* interface.
 
-\snippet users_modules/tutorials/vec-0/elastic.cpp Boundary condition
+\snippet tutorials/vec-0/elastic.cpp Boundary condition
 
 For the examples considered in this tutorial, the provided meshes contain only one meshset *FIX_ALL* that will essentially fix displacements in all directions to zero. In \ref figure2_problem_fix_all "Figure 2" we show selected triangles on the face of triangles that are used to define the *FIX_ALL* meshset. While for the 2D case, we select edge elements instead.
 
@@ -112,17 +112,17 @@ For the examples considered in this tutorial, the provided meshes contain only o
 
 The next function of the main program, Example::assembleSystem() is responsible for defining pipelines used to evaluate linear and bilinear forms of the system (refer to \ref user_data_operators_table) and assembly of the global matrices and vectors.
 
-\snippet users_modules/tutorials/vec-0/elastic.cpp Push operators to pipeline
+\snippet tutorials/vec-0/elastic.cpp Push operators to pipeline
 
 \subsubsection tutorial_elastic_integration_rule Integration rule
 The first part of this function, sets and pushes the integration rule for the finite element method to the pipeline.
 
-\snippet users_modules/tutorials/vec-0/elastic.cpp Integration rule
+\snippet tutorials/vec-0/elastic.cpp Integration rule
 
 \subsubsection tutorial_elastic_pushing_stiffness_matrix Pushing domain stiffness matrix
 The second part of this function, first calculates the local elasticity tensor through `addMatBlockOps` function depending on the `MAT_ELASTIC` block defined in the mesh file, then pushes the LHS stiffness matrix using alias `OpK` to the LHS pipeline.
 
-\snippet users_modules/tutorials/vec-0/elastic.cpp Push domain stiffness matrix to pipeline
+\snippet tutorials/vec-0/elastic.cpp Push domain stiffness matrix to pipeline
 
 The local elasticty tensor \f$ \mathbb D\f$ is calculate using the formula below: 
 \f[
@@ -140,7 +140,7 @@ where\f$ K\f$ and\f$ G\f$ are bulk and shear modulus, respectively. The coeffici
 
 Using the FTensor::Index type these formulas can be directly implemented using Einstein's summation convention as shown below, within the Example::addMatBlockOps() function:
 
-\snippet users_modules/tutorials/vec-0/elastic.cpp Calculate elasticity tensor
+\snippet tutorials/vec-0/elastic.cpp Calculate elasticity tensor
 
 \note Note that depending on *SPACE_DIM* our code will appropriately sum over all the indices and set coefficient \f$ A \f$ for plane stress or 3D case.
 
@@ -155,7 +155,7 @@ The operator `OpK` integrates the bilinear form:
 and subsequently assembles it into global system matrix \f$ \mathbf K \f$.
 Note that once again, a new operator does not have to be defined as `OpK` is simply an alias to existing operator from MoFEM's repertoire. To that operator we are passing previously defined container that stores elasticity tensor \f$ \mathbb D \f$.
 
-\snippet users_modules/tutorials/vec-0/elastic.cpp OpK
+\snippet tutorials/vec-0/elastic.cpp OpK
 
 The utilised `OpGradSymTensorGrad` form integrator template of Bilinear Form has four parameters: rank of the base, rank of row field, rank of the column field and finally, the increment of elasticity tensor, which in case of homogeneous material can be set to 0.
 
@@ -164,7 +164,7 @@ More info about available Form Integrators can be found in \ref user_data_operat
 \subsubsection tutorial_elastic_internal_force_matrix Pushing internal forces
 
 The next part of the Example::assembleSystem() function calculates the internal forces for the system which is required to enforce the boundary conditions (defined as \f$ \mathbf K \mathbf u_e \f$ refer to \ref basic_tutorials_poisson_homogeneous for an in depth description). For elastic problems, this requires calculating the displacement gradient \f$ \nabla \mathbf u \f$, strain \f$ \boldsymbol \varepsilon \f$ and stress \f$ \boldsymbol \sigma \f$ of the system by pushing the relevant operatiors to the RHS pipeline.
-\snippet users_modules/tutorials/vec-0/elastic.cpp Push Internal forces
+\snippet tutorials/vec-0/elastic.cpp Push Internal forces
 This is achieved by pushing a series of operators as follows:
 - `OpCalculateVectorFieldGradient` computes the gradient of the displacement field \f$ \nabla \mathbf u^{h}=\sum_{m=0}^{N-1} \nabla \phi_m \bar{\mathbf u}_m \f$
 - `OpSymmetrizeTensor` symmetrises the previously computed gradient to compute small strain tensor \f$ \boldsymbol \varepsilon = \frac{1}{2} (\nabla \mathbf u^\text{T} + \nabla \mathbf u)  \f$
@@ -180,25 +180,25 @@ For natural boundary conditions we will only specify simple gravity load on the 
 \f]
 
 This operation can be done by utilsing the `DomanRhsBc::AddFluxToPipeline` alias which applies a flux User Data Operator into RHS pipeline as shown below. 
-\snippet users_modules/tutorials/vec-0/elastic.cpp Push natural boundary conditions
+\snippet tutorials/vec-0/elastic.cpp Push natural boundary conditions
 
 \subsection tutorial_elastic_solver_setup Solver setup
 With appropriately defined pipelines for assembling the global system of equations \f$ \mathbf{K} \mathbf{U} = \mathbf{F} \f$, the next functions Example::solveSystem() sets up PETSc solver and calculates it directly or iteratively based on specified settings. 
 
-\snippet users_modules/tutorials/vec-0/elastic.cpp Solve
+\snippet tutorials/vec-0/elastic.cpp Solve
 
 Note that in case of simple linear problems like elasticity considered therein the above snippet will look very similar. A detailed description of each function can be found e.g. in \ref basic_tutorials_poisson_homogeneous.
 
 \subsection tutorial_elastic_postprocessing Postprocessing pipeline
 Finally, once the solver calculations are completed and solution vector is obtained, it is necessary to save the data on the visualisation mesh and compute quantities of interest like strains and stresses. In function Example::outputResults() we will define pipeline to postprocess the results and save the calculated values to the output mesh. 
 
-\snippet users_modules/tutorials/vec-0/elastic.cpp Postprocess results
+\snippet tutorials/vec-0/elastic.cpp Postprocess results
 
 We can reuse LHS domain pipeline, for the purpose of postprocessing. The following line resets (cleans) the operators pushed previously for each pipeline.
-\snippet users_modules/tutorials/vec-0/elastic.cpp Postprocess clean
+\snippet tutorials/vec-0/elastic.cpp Postprocess clean
 
 In the next few lines we create various postprocessing objects including the reference mesh and lists of elements to postprocess.
-\snippet users_modules/tutorials/vec-0/elastic.cpp Postprocess initialise
+\snippet tutorials/vec-0/elastic.cpp Postprocess initialise
 
 Then we define a series of functions including, `calculate_stress_ops`, `post_proc_domain` and `post_proc_boundary` which push the operators required to output the displacement \f$ \mathbf{u} \f$, current position \f$ \mathbf{x} \f$, strain \f$ \boldsymbol{\varepsilon} \f$ and stress \f$ \boldsymbol{\sigma} \f$ for the domain and boundary.
 
