--- a/mofem/doc/authors_page.dox
+++ b/mofem/doc/authors_page.dox
@@ -43,6 +43,7 @@
   - Yingjia (Leo) Gao, The University of Glasgow, Scotland, UK, <a href="https://www.linkedin.com/in/yingjia-gao-064742295/"><i class="fab fa-linkedin-in"></i></a>
   - Ananya Bijaya, The University of Glasgow, Scotland, UK
   - Lily Sierra Fisher, The University of Glasgow, Scotland, UK, <a href="https://www.linkedin.com/in/lily-sierra/"><i class="fab fa-linkedin-in"></i></a>
+  - <a href="https://www.mmu.ac.uk/staff/profile/dr-oliver-duncan">Oliver Duncan</a>, Manchester Metropolitan University, England, UK 
 
 \section mofem_users_modules_past_contributors Past Contributors
 
